<resources>
    <string name="app_name">chapter-09-intent-result-activity-contact-phone</string>
    <string name="chapter_09_intent_implisit">Chapter 09: Intent onResultActivity Contact Phone</string>
    <string name="go_to_contact_phone">Go to Contact Phone</string>
    <string name="contact_phone">Contact Phone</string>
    <string name="sample_number_phone">Sample Number Phone</string>
    <string name="camera">Camera</string>
    <string name="todo">todo</string>
    <string name="gallery">Gallery</string>
</resources>