<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/chapter_09_intent_implisit"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/go_to_contact_phone"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnContactPhone"
        android:text="@string/contact_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvNumberPhone"
        android:text="@string/sample_number_phone"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/go_to_contact_phone"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/imageData"
        android:src="@drawable/ic_launcher_background"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/btnCamera"
        android:text="@string/camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnGallery"
        android:text="@string/gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>